--- a/index.html
+++ b/index.html
@@ -5,20 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>| Algo-Visualizer |</title>
+    <!-- ============================================ fonts ============================================= -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <!--    Bootstrap css file-->
-
+    <!-- ====================================== Bootstrap css file======================================== -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
-    <!--css file-->
+    <!-- ======================================== css file================================================ -->
+    <link rel="stylesheet" href="./source/assets/Master/css/style.css">
 
-    <link rel="stylesheet" href="./Master/css/style.css">
-
-    <!-- icons -->
-
+    <!-- ========================================== js file============================================== -->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 
 </head>
@@ -30,18 +27,18 @@
     <section class="banner" id="sec">
         <style type="text/css">
             body {
-                background: url(./Source/Images/3a.jpg);
+                background: url(/source/assets/Images/bg/bg1.jpg);
                 background-size: cover;
             }
             </style>
         <header>
-            <a href="/" class="logo"><img src="/Source/Images/logo/2b.png"  alt="logo" width="95px;"></a>
+            <a href="/" class="logo"><img src="/source/assets/Images/logo/lg3.png"  alt="logo" width="95px;"></a>
             <div id="toggle" onclick="toggle()"></div>
         </header>
         <div class="content">
             <h2><span>Algo <br> Visualizer</span></h2><br>
             <p>Imagination is more important than knowledge..!</p>
-            <a href="./assets/menu.html" class="btn"><svg> <rect></rect> </svg> Explore</a>
+            <a href="/source/templates/Master/algo_menu.html" class="btn"><svg> <rect></rect> </svg> Explore</a>
         </div>
         <div class="social">
             <a href=""><i class="fab fa-github"></i></a>
@@ -59,6 +56,7 @@
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Contact</a></li>
+            <li><a href="./source/templates/registration/registration.html">Login</a></li>
         </ul>
     </div>
 
@@ -72,6 +70,8 @@
             </div>
         </section> -->
 
+    <!-- -----------===--------------===----------------------- -->
+    
     <!-- <script>
         $(window).on("load", function() {
           $("#preloader").fadeOut("slow");
