Updated html file

--- a/index.html
+++ b/index.html
@@ -51,22 +51,19 @@
     <div class="scrolldown"><b>SCROLL DOWN - -</b><span></span></div>
 
     <header>
-      <a href="#" class="logo"
+      <a href="" class="logo"
         ><img src="/source/assets/Images/logo/lg3.png" alt=""
       /></a>
       <div class="menuToggle" onclick="toggleMenu();"></div>
       <ul class="navigation">
-        <li><a href="#one" class="active">Home</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="" class="active">Home</a></li>
+        <li><a href="#two">About</a></li>
         <li><a href="#three">Contact</a></li>
-        <li class="block">
+        <li class="">
           <a href="/source/templates/registration/registration.html"
-            ><span>Logout</span></a
+            ><span>Login</span></a
           >
         </li>
-        <!-- <li class="none">
-          <a href=""><span>Logout</span></a>
-        </li> -->
       </ul>
     </header>
 
@@ -108,7 +105,7 @@
             Email: nikithkumarniki160698@gmail.com<br />
           </p>
           <div  data-aos="fade-up" data-aos-duration="1200">
-            <a href="#" class="exp-btn">Discover Me</a>
+            <a href="" class="exp-btn">Discover Me</a>
           </div>
         </div>
 
@@ -149,7 +146,7 @@
         <p class="text-center">
           Designed and built with
           <span class="icon"><i class="fa fa-heart fa-lg"></i></span> by
-          <a href="#" target="_blank"> The ThunderBolt</a>
+          <a href="" target="_blank"> The ThunderBolt</a>
         </p>
         <!-- <p>&copy; 2020 <span>NIKITH KUMAR N</span> | All Rights Reserved</p> -->
       </div>
