index file updated

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <li><a href="#two">About</a></li>
         <li><a href="#three">Contact</a></li>
         <li class="">
-          <a href="/source/templates/registration/registration.html"
+          <a href=""
             ><span>Login</span></a
           >
         </li>
