index file update

--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
 				</p>
 				<a
 					href="/source/templates/Master/algo_menu.html"
-					class="btn logged-in"
-					style="display: none"
+					class="btn"
 					data-aos="fade-up"
 					data-aos-duration="1500"
 					><svg><rect></rect></svg>Explore</a
