updated index file

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 				<li>
 					<a href="#one" class="active">Home</a>
 				</li>
-				<li class="logged-in" style="display: none">
+				<li>
 					<a href="#about">About</a>
 				</li>
-				<li class="logged-in" style="display: none">
-					<a href="#three">Account</a>
+				<li>
+					<a href="#three">Contact</a>
 				</li>
 				<li class="logged-in" style="display: none">
 					<a
